.k3s/manifests/nginx/nginx-service.yaml
# Nginx Service
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: nginx
spec:
  selector:
    app: nginx
  ports:
  - name: http
    targetPort: 80
    port: 80
