.k3s/manifests/nginx/nginx-ingressroute-all-zones-stage.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nginx-ingressroute-danne-dev-stage
  namespace: nginx
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`stage.danne.dev`) || HostRegexp(`{sub:[a-z0-9-]+}.stage.danne.dev`)
      priority: 200
      services:
        - name: nginx
          port: 80
  tls:
    secretName: nginx-certificate-secret-all-zones-stage  # Referencing to
